--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Xcode
 #
+.DS_Store
 build/
 *.pbxuser
 !default.pbxuser
@@ -19,8 +20,7 @@ DerivedData
 
 # CocoaPods
 #
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-# Pods/
+/Pods/
+FactoryBirdTests/Pods
+FactoryBirdTests/Podfile.lock
+FactoryBirdTests/FactoryBirdTests.xcodeproj/xcshareddata/xcschemes/
