--- a/FactoryBirdTests/Podfile
+++ b/FactoryBirdTests/Podfile
@@ -1,7 +1,23 @@
-platform :<#ios#>, "<#6.0#>"
+source 'https://github.com/CocoaPods/Specs'
 
-pod "<#PodName#>"
+xcodeproj 'FactoryBirdTests'
+workspace '../FactoryBird'
+inhibit_all_warnings!
 
-target :<#TargetName#>Tests, :exclusive => true do
-  # pod 'Kiwi'
+def import_pods
+  pod 'Specta', '~> 0.3.2'
+  pod 'Expecta', '0.3.1'
+  pod 'FactoryBird', :path => '../'
+end
+
+target :ios do
+  platform :ios, '7.0'
+  link_with 'iOSTests'
+  import_pods
+end
+
+target :osx do
+  platform :osx, '10.8'
+  link_with 'OSXTests'
+  import_pods
 end
